--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Search Enhancement for code",
   "description": "The extension helps developers search functions/variables in code by keywords",
   "keywords": ["search", "keyword"],
-  "version": "0.1.0",
+  "version": "0.1.1",
   "publisher": "jeffreyhc",
   "engines": {
     "vscode": "^1.96.0"
@@ -90,6 +90,9 @@
     "globals": "^15.15.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.24.0"
+  },
+  "dependencies": {
+    "@vscode/codicons": "^0.0.35"
   },
   "license": "Refer to LICENSE.md",
   "bugs": {
